# turborag

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
benchmark_index/: config.json  records.jsonl  rotation.npy
benchmark_index/shards/: shard_000.ids.json  shard_001.ids.json  shard_002.ids.json  shard_003.ids.json  shard_004.ids.json
clients/: README.md
clients/go/: README.md  go.mod  turborag.go
clients/go/benchmark/: go.mod  main.go
clients/ruby/: README.md  benchmark.rb  turborag.gemspec
clients/ruby/lib/: turborag.rb
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/typescript/: README.md  package-lock.json  package.json  run-benchmark.cjs
clients/typescript/src/: index.ts
clients/typescript/tests/: client.test.cjs  integration.test.cjs
docs/: adoption.md  architecture.md  benchmarking.md  current-rag-rollout.md  implementation-plan.md  import-existing.md  installation.md  llm-request-model.md  service.md  spec-decisions.md  spec-status.md
nodejs/: README.md  package.json  run-benchmark.js  run-integration.js
nodejs/src/: client.js  errors.js  index.d.ts  index.js  validators.js
nodejs/tests/: client.test.js  integration.test.js  validators.test.js
scripts/: benchmark_compare.sh  generate_benchmark_fixture.py  smoke_test.sh
src/turborag/: __init__.py  _cscore.c  _cscore_wrapper.py  benchmark.py  chunker.py  cli.py  compress.py  embeddings.py  exceptions.py  fast_kernels.py  filters.py  graph.py  hybrid.py  index.py  ingest.py  mcp_server.py  service.py  types.py
src/turborag/adapters/: __init__.py  backends.py  compat.py  config.py  langchain.py
tests/: test_adapter_config.py  test_adapters.py  test_backend_adapters.py  test_benchmark.py  test_chunker.py  test_cli.py  test_compress.py  test_edge_cases.py  test_fast_kernels.py  test_filters.py  test_graph.py  test_hybrid.py  test_index.py  test_index_operations.py  test_ingest.py  test_integration.py  test_service.py
website/: index.html  package-lock.json  package.json
website/public/: llms.txt
website/src/: App.tsx  styles.css
