[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turborag"
version = "0.5.0"
description = "Compressed vector and graph-augmented retrieval engine with adaptive two-stage search, implementing TurboQuant/QJL quantization from Google Research."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Ratnam Shah" }
]
keywords = [
  "rag",
  "retrieval",
  "vector-search",
  "quantization",
  "compressed-vectors",
  "turboquant",
  "similarity-search",
  "embeddings",
  "llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Database :: Database Engines/Servers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.0",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ratnam1510/turborag"
Repository = "https://github.com/ratnam1510/turborag"
Documentation = "https://github.com/ratnam1510/turborag/tree/main/docs"
Issues = "https://github.com/ratnam1510/turborag/issues"
Changelog = "https://github.com/ratnam1510/turborag/blob/main/CHANGELOG.md"

[project.optional-dependencies]
embed = [
  "sentence-transformers>=2.5",
]
graph = [
  "networkx>=3.0",
  "leidenalg>=0.10",
  "python-igraph>=0.10",
]
ingest = [
  "pdfminer.six>=20221105",
  "tiktoken>=0.6",
]
serve = [
  "starlette>=0.37",
  "uvicorn>=0.27",
]
mcp = [
  "mcp>=1.0",
]
adapters = [
  "psycopg>=3.1",
  "supabase>=2.0",
  "pinecone>=5.0",
  "qdrant-client>=1.9",
  "chromadb>=0.5",
]
all = [
  "sentence-transformers>=2.5",
  "networkx>=3.0",
  "leidenalg>=0.10",
  "python-igraph>=0.10",
  "pdfminer.six>=20221105",
  "tiktoken>=0.6",
  "starlette>=0.37",
  "uvicorn>=0.27",
  "mcp>=1.0",
  "psycopg>=3.1",
  "supabase>=2.0",
  "pinecone>=5.0",
  "qdrant-client>=1.9",
  "chromadb>=0.5",
]

dev = [
  "pytest>=8.0",
]

[project.scripts]
turborag = "turborag.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
turborag = ["_cscore.c", "py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
